objects/Teacher__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Teacher Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Teachers</relationshipLabel>
        <relationshipName>Teachers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>My_Student__c</fullName>
        <label>My Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Teachers</relationshipLabel>
        <relationshipName>Teachers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Teachers</relationshipLabel>
        <relationshipName>Teachers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TeacherInfo__c</fullName>
        <label>TeacherInfo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Teacher</label>
    <nameField>
        <label>Teacher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TeacherInfoValidation</fullName>
        <active>true</active>
        <description>TeacherInfo cannot contain Numeric Values</description>
        <errorConditionFormula>CONTAINS(TeacherInfo__c, &quot;12&quot;)</errorConditionFormula>
        <errorMessage>Teacher Info Cannot Contain Numeric Values</errorMessage>
    </validationRules>
</CustomObject>